# bootcamp_ros2

./: .gitignore
bootcamp_vision/: CMakeLists.txt  README.md  package.xml
bootcamp_vision/config/: bridge_camera.yaml  bridge_spawn.yaml
bootcamp_vision/launch/: spawn_object.launch.py  vision_world.launch.py
bootcamp_vision/models/aruco_parcel/: model.config  model.sdf
bootcamp_vision/models/coffee_pack_1/: model.config  model.sdf
bootcamp_vision/models/coffee_pack_2/: model.config  model.sdf
bootcamp_vision/models/coffee_pack_3/: model.config  model.sdf
bootcamp_vision/models/digit_panel/: model.config  model.sdf
bootcamp_vision/models/shape_cube/: model.config  model.sdf
bootcamp_vision/models/shape_cylinder/: model.config  model.sdf
bootcamp_vision/models/shape_star/: model.config  model.sdf
bootcamp_vision/models/trash_bottle/: model.config  model.sdf
bootcamp_vision/models/trash_can/: model.config  model.sdf
bootcamp_vision/models/trash_carton/: model.config  model.sdf
bootcamp_vision/msg/: Detection.msg  DetectionArray.msg
bootcamp_vision/scripts/: capture_dataset.py  generate_aruco.py  generate_digit.py  generate_label.py  spawn_object.py
bootcamp_vision/worlds/: vision_table.sdf
