<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bootcamp_vision</name>
  <version>0.1.0</version>
  <description>Monde de simulation Gazebo (Ionic) « vision » du Jour 4 : caméra fixe
    au-dessus d'une table + bibliothèque d'objets (formes, ArUco, café, déchets,
    chiffre) et spawner paramétrable — Bootcamp 2026.</description>

  <maintainer email="contact@etienne-schmitz.com">Etienne Schmitz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Simulation + pont ros_gz -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <!-- Spawner + TF statiques -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- Generation des textures (aruco / chiffre / labels) -->
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
